# godforsaken-save-manager

./: .gitignore  README.md  build.bat  prd.md  pyproject.toml
.github/workflows/: release.yml
docs/: prd.md
docs/scripts/: prepare_build.py  使用说明.md  备份存档.bat  恢复存档.bat
docs/specs/: 自动更新与发布系统规划文档.md
src/godforsaken_save_manager/: main.py
src/godforsaken_save_manager/common/: constants.py  helpers.py  paths.py
src/godforsaken_save_manager/core/: backup_entry.py  backup_manager.py  config_manager.py  file_operations.py  process_checker.py  updater.py
src/godforsaken_save_manager/i18n/: en_US.json  translator.py  zh_CN.json
src/godforsaken_save_manager/i18n/langs/: en_US.json  zh_CN.json
src/godforsaken_save_manager/ui/: main_window.py  settings_window.py  style.qss
src/godforsaken_save_manager/ui/styles/: dark.qss  light.qss
src/tests/: test_backup_manager.py  test_config_manager.py  test_file_operations.py
