[tool.poetry]
name = "godforsaken-save-manager"
version = "0.0.3"
description = "A save management tool for GodForsaken"
authors = ["七夜听雪 <abevol@github.com>"]
packages = [{ include = "godforsaken_save_manager", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
PySide6 = "^6.7.0"
psutil = "^5.9.8"
pywin32 = "^311"
requests = "^2.32.5"

[tool.poetry.scripts]
godforsaken-save-manager = "godforsaken_save_manager.main:main"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.8.4"

