[tool.poetry]
name = "godforsaken-save-manager"
version = "0.0.9"
description = "A save management tool for GodForsaken"
authors = ["七夜听雪 <abevol@github.com>"]
packages = [{ include = "godforsaken_save_manager", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
PySide6 = "^6.7.0"
psutil = "^5.9.8"
pywin32 = "^311"
requests = "^2.32.5"
toml = "^0.10.2"

[tool.poetry.scripts]
godforsaken-save-manager = "godforsaken_save_manager.main:main"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.8.4"
pyside6-stubs = "^6.7.3.0"

